# perbot

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SPEC.md  bench.sh  test-cases.md
deploy/: README.md  deploy.sh  perbot.service  spot.yml
src/: commands.rs  converter.rs  error.rs  import.rs  lib.rs  logger.rs  main.rs  mapper.rs  parser.rs  pending.rs  richtext.rs  scheduler.rs  state.rs  storage.rs  telegram.rs  tgbot.rs  types.rs
src/locale/: english.rs  mod.rs
tests/: table_tests.rs
