[package]
name = "perbot"
description = "Telegram event scheduler bot"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
log = "0.4.29"
pretty_env_logger = "0.5"
chrono = "0.4"
regex = "1"
rusqlite = { version = "0.35", features = ["bundled"] }
