[package]
name = "perbot"
description = "Telegram event scheduler bot"
version = "0.1.0"
edition = "2024"
default-run = "perbot"
license = "Apache-2.0"

[dependencies]
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
log = "0.4.29"
flexi_logger = "0.31"
chrono = "0.4"
regex = "1"
rusqlite = { version = "0.38", features = ["bundled"] }